erDiagram
%% 核心模块
    USER ||--o{ ADDRESS : "管理"
    USER }|--|{ ORDER : "下单/接单"
    ORDER ||--|| PAYMENT : "关联"
    ADDRESS }o--|| ORDER : "作为[起]"
    ADDRESS }o--|| ORDER : "作为[终]"

%% 评价系统
    USER ||--o{ REVIEW : "发表"
    ORDER ||--|| REVIEW : "拥有"

%% 黑名单系统
    USER ||--o{ BLACKLIST : "拉黑"
    BLACKLIST }o--|| USER : "被黑用户"

%% 实体定义
    USER { }
    ADDRESS { }
    ORDER { }
    PAYMENT { }
    REVIEW { }
    BLACKLIST { }